[gd_scene load_steps=15 format=3 uid="uid://dj1d8jjmv2523"]

[ext_resource type="Script" uid="uid://be8jwtgt4r5fp" path="res://MobTank/mobtank.gd" id="1_eesmj"]
[ext_resource type="PackedScene" uid="uid://c8fokg0yxgmhc" path="res://Tank/explotion.tscn" id="2_wyegc"]
[ext_resource type="Texture2D" uid="uid://dud1j7e1fkkvm" path="res://Resource/bc_0.png" id="3_30uii"]
[ext_resource type="Script" uid="uid://crmse12bmgead" path="res://MobTank/tank_area_2d.gd" id="4_vrnud"]
[ext_resource type="AudioStream" uid="uid://ccebk5r2ehg3o" path="res://sound/shieldhit.ogg" id="5_3c02v"]

[sub_resource type="Animation" id="Animation_1oq11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3k7ce"]
resource_name = "down"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_f6iin"]
resource_name = "left"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_t5hup"]
resource_name = "right"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_c06jl"]
resource_name = "up"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fi5gh"]
_data = {
&"RESET": SubResource("Animation_1oq11"),
&"down": SubResource("Animation_3k7ce"),
&"left": SubResource("Animation_f6iin"),
&"right": SubResource("Animation_t5hup"),
&"up": SubResource("Animation_c06jl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6lwu"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crbmg"]
size = Vector2(48, 15.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brnwi"]
size = Vector2(48, 15.9)

[node name="MobTank" type="CharacterBody2D"]
physics_interpolation_mode = 2
disable_mode = 1
motion_mode = 1
wall_min_slide_angle = 0.0
platform_wall_layers = 4194304
safe_margin = 0.001
script = ExtResource("1_eesmj")
exploration = ExtResource("2_wyegc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("3_30uii")
hframes = 8
region_enabled = true
region_rect = Rect2(128, 64, 128, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fi5gh")
}

[node name="TankArea2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2048
script = ExtResource("4_vrnud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TankArea2D"]
shape = SubResource("RectangleShape2D_k6lwu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.18

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.05

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -31.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 31.0

[node name="rollTime" type="Timer" parent="."]
one_shot = true

[node name="BulletTime" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 23.9)
rotation = 3.14159
shape = SubResource("RectangleShape2D_crbmg")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0, -23.9)
shape = SubResource("RectangleShape2D_crbmg")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(-23.9, 0)
rotation = -1.5708
shape = SubResource("RectangleShape2D_brnwi")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(23.9, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_brnwi")
one_way_collision = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3c02v")

[connection signal="area_entered" from="TankArea2D" to="." method="_on_tank_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
[connection signal="timeout" from="rollTime" to="." method="_on_roll_time_timeout"]
[connection signal="timeout" from="BulletTime" to="." method="_on_bullet_time_timeout"]
